Obter solicitações de doação por filtros.
